<resources>

    <string name="name">Name</string>
    <string name="trade">Trade :</string>
    <string name="amount">Amount :</string>
    <string name="volume">Volume :</string>
    <string name="companies">Companies</string>
    <string name="winning">winning</string>
    <string name="fixed">fixed</string>
    <string name="losing">losing</string>
    <string name="symbol">Symbol:</string>
    <string name="trades_count">TradesCount:</string>
    <string name="high">High:</string>
    <string name="low">Low:</string>
    <string name="app_name">Ticker Chart</string>
    <string name="english">English-Arabic</string>
    <string name="light">Light-Dark</string>
    <!--to toggle the open close button
        of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    /////
    <string name="company">Company</string>
    <string name="high_price">HighPrice</string>
    <string name="bid_price">BidPrice</string>
    <string name="last_price">LastPrice</string>
    <string name="ask_price">AskPrice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
