<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

    <androidx.cardview.widget.CardView
        android:layout_width="388dp"
        android:layout_height="140dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="20dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">
            <TextView
                android:id="@+id/txtview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/trade"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/trade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:text="@string/amount"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtview5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"
                android:text="@string/volume"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="82dp"
                android:layout_marginTop="40dp"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/companies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="85dp"
                android:text="@string/companies"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtview8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginTop="75dp"
                android:text="@string/winning"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtview9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="240dp"
                android:layout_marginTop="75dp"
                android:text="@string/fixed"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtview10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="280dp"
                android:layout_marginTop="75dp"
                android:text="@string/losing"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/winning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="195dp"
                android:layout_marginTop="100dp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fixed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="245dp"
                android:layout_marginTop="100dp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/losing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="290dp"
                android:layout_marginTop="100dp"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>



    </androidx.cardview.widget.CardView>


</RelativeLayout>